[package]
name = "bro-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = {version = "1.41.1", features = ["full"]}
socketioxide = "0.15.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["cors"]}
chrono = {version = "0.4.38", features = ["serde"]}