[package]
name = "bro-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bro"

[dependencies]
axum = "0.7.7"
tokio = {version = "1.41.1", features = ["full"]}
socketioxide = "0.15.1"
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.132"
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["cors"]}
chrono = {version = "0.4.38", features = ["serde"]}